# frictional-price-discovery

./: .env.example  Makefile  README.md  pyproject.toml
docs/: data_ingestion_blueprint.md  method_spec.md  relevant_research.md
ingestion/: __init__.py  cli.py  config.py  dataset_builder.py  export.py  features.py  logging.py  models.py  pipeline_align.py  pipeline_full.py  pipeline_processed.py  pipeline_raw.py  reporting.py  utils_time.py  validation.py
ingestion/sources/: __init__.py  coinbase.py  ethereum_rpc.py  uniswap_graph.py
ingestion/transforms/: __init__.py  time_align.py
notebooks/.ipynb_checkpoints/: data_sanity-checkpoint.ipynb
scripts/: analyze_full_run.py  check_connectivity.sh  check_uniswap_subgraph_vs_chain.py
tests/: test_basefee_minute_mapping.py  test_cli_align_run.py  test_cli_features_preview.py  test_cli_full_run.py  test_cli_process_run.py  test_cli_raw_ingest.py  test_coinbase_client.py  test_coinbase_schema.py  test_config_contract.py  test_ethereum_rpc_client.py  test_export_metadata.py  test_export_parquet.py  test_features_basis.py  test_features_golden.py  test_features_invariants.py  test_features_realized_vol.py  test_features_violations.py  test_missingness_report.py  test_pipeline_align.py  test_pipeline_full.py  test_pipeline_processed.py  test_pipeline_raw_formats.py  test_smoke.py  test_time_align.py  test_uniswap_graph_client.py  test_uniswap_graph_parsing.py  test_validation_checks.py
tests/fixtures/: features_expected.json  features_input.json
tests/integration/: test_raw_ingestion_sanity.py
